Changed left to school

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="section">
       <div class="list left1">
-        <h1 id="sidebarLeft1">Left</h1>
+        <h1 id="sidebarLeft1">School</h1>
         <ul>
            <li><a href="http://www.reddit.com/r/GlobalOffensive/">/r/GlobalOffensive</a>
            <li><a href="https://www.reddit.com/r/Rainbow6/">/r/Rainbow6</a>
