Changed the Box Headers to test that i could do this

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="section">
       <div class="list left1">
-        <h1 id="sidebarLeft1">School</h1>
+        <h1 id="sidebarLeft1">Everyday</h1>
         <ul>
            <li><a href="http://www.reddit.com/r/GlobalOffensive/">/r/GlobalOffensive</a>
            <li><a href="https://www.reddit.com/r/Rainbow6/">/r/Rainbow6</a>
@@ -22,7 +22,7 @@
         </ul>
       </div>
       <div class="list left2">
-        <h1 id="sidebarLeft2">Left</h1>
+        <h1 id="sidebarLeft2">School</h1>
         <ul>
            <li><a href="http://www.reddit.com/r/GlobalOffensive/">/r/GlobalOffensive</a>
            <li><a href="https://www.reddit.com/r/Rainbow6/">/r/Rainbow6</a>
@@ -32,7 +32,7 @@
         </ul>
       </div>
       <div class="list right1">
-        <h1 id="sidebarRight1">Right</h1>
+        <h1 id="sidebarRight1">Fun Stuff</h1>
         <ul>
            <li><a href="https://www.reddit.com/r/modtalk/">/r/ModTalk</a>
            <li><a href="https://www.reddit.com/r/CommunityDialogue">/r/CommunityDialogue</a>
@@ -42,7 +42,7 @@
         </ul>
       </div>
       <div class="list right2">
-        <h1 id="sidebarRight2">Right</h1>
+        <h1 id="sidebarRight2">Assorted</h1>
         <ul>
            <li><a href="https://www.reddit.com/r/modtalk/">/r/ModTalk</a>
            <li><a href="https://www.reddit.com/r/CommunityDialogue">/r/CommunityDialogue</a>
