Edited 'Everyday' Links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Startpage</title>
+    <title>Start</title>
     <link rel="stylesheet" href="style.css">
     <script async src="script.js"></script>
 </head>
@@ -14,11 +14,9 @@
       <div class="list left1">
         <h1 id="sidebarLeft1">Everyday</h1>
         <ul>
-           <li><a href="http://www.reddit.com/r/GlobalOffensive/">/r/GlobalOffensive</a>
-           <li><a href="https://www.reddit.com/r/Rainbow6/">/r/Rainbow6</a>
-           <li><a href="https://www.reddit.com/r/webdev/">/r/WebDev</a>
-           <li><a href="https://www.reddit.com/r/web_design/">/r/Web_Design</a>
-           <li><a href="http://www.reddit.loveyouom/r/arma/">/r/Arma</a>
+		   <li><a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
+           <li><a href="https://drive.google.com/drive/folders/0B79vVmLS8AbxR1hKR08zMXBuYWs">Drive</a>
+           <li><a href="https://trello.com/">Trello</a>
         </ul>
       </div>
       <div class="list left2">
