--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div class="list left2">
         <h1 id="sidebarLeft2">School</h1>
         <ul>
-           <li><a href="http://www.reddit.com/r/GlobalOffensive/">/r/GlobalOffensive</a>
-           <li><a href="https://www.reddit.com/r/Rainbow6/">/r/Rainbow6</a>
-           <li><a href="https://www.reddit.com/r/webdev/">/r/WebDev</a>
-           <li><a href="https://www.reddit.com/r/web_design/">/r/Web_Design</a>
-           <li><a href="http://www.reddit.loveyouom/r/arma/">/r/Arma</a>
+           <li><a href="http://www.pathwaystotechnology.com/groups.cfm?groupDashboardView=calendar">Pathways Portal</a>
+           <li><a href="http://www.pathwaystotechnology.com/page.cfm?p=1">Pathways</a>
+           <li><a href="https://powerschool.hartfordschools.org/public/home.html">Powerschool</a>
+           <li><a href="https://connection.naviance.com/family-connection/auth/login/?hsid=hphspatd">Naviance</a>
+           <li><a href="https://hs.studyisland.com/index.cfm?">Study Island</a>
         </ul>
       </div>
       <div class="list right1">
