I dont even remember
Do I trust this desktop thing?

--- a/index.html
+++ b/index.html
@@ -27,24 +27,26 @@
            <li><a href="https://powerschool.hartfordschools.org/public/home.html">Powerschool</a>
            <li><a href="https://connection.naviance.com/family-connection/auth/login/?hsid=hphspatd">Naviance</a>
            <li><a href="https://hs.studyisland.com/index.cfm?">Study Island</a>
+		   <li><a href="https://www.desmos.com/calculator">Desmos</a>
+		   <li><a href="https://www.symbolab.com/">Symbolab</a>
         </ul>
       </div>
       <div class="list right1">
-        <h1 id="sidebarRight1">Fun Stuff</h1>
+        <h1 id="sidebarRight1">Media and Distractions</h1>
         <ul>
-           <li><a href="https://www.reddit.com/r/modtalk/">/r/ModTalk</a>
-           <li><a href="https://www.reddit.com/r/CommunityDialogue">/r/CommunityDialogue</a>
-           <li><a href="https://www.reddit.com/r/Windows10/">/r/Windows10</a>
-           <li><a href="https://www.reddit.com/r/ClearShift/">/r/ClearShift</a>
-           <li><a href="http://www.reddit.com/r/WindowsMobile/">/r/WindowsMobile</a>
+           <li><a href="https://netflix.com/">Netflix</a>
+           <li><a href="https://emby.hbh7.com/web/home.html">Hunterflix</a>
+           <li><a href="https://kissanime.to/">KissAnime</a>
+           <li><a href="http://kisscartoon.me/">KissCartoon</a>
+           <li><a href="http://www.reddit.com/">Reddit</a>
         </ul>
       </div>
       <div class="list right2">
-        <h1 id="sidebarRight2">Assorted</h1>
+        <h1 id="sidebarRight2">Gaymes or Whatever Assorted. I wonder what happens when I fill this up</h1>
         <ul>
-           <li><a href="https://www.reddit.com/r/modtalk/">/r/ModTalk</a>
-           <li><a href="https://www.reddit.com/r/CommunityDialogue">/r/CommunityDialogue</a>
-           <li><a href="https://www.reddit.com/r/Windows10/">/r/Windows10</a>
+           <li><a href="http://patorjk.com/games/snake/">Snake</a>
+           <li><a href="http://agar.io/">Agar</a>
+           <li><a href="http://slither.io/">Slither</a>
            <li><a href="https://www.reddit.com/r/ClearShift/">/r/ClearShift</a>
            <li><a href="http://www.reddit.com/r/WindowsMobile/">/r/WindowsMobile</a>
         </ul>
