Added Amazon to Everyday

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		   <li><a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
            <li><a href="https://drive.google.com/drive/folders/0B79vVmLS8AbxR1hKR08zMXBuYWs">Drive</a>
            <li><a href="https://trello.com/">Trello</a>
+		   <li><a href="https://www.amazon.com/gp/css/order-history?ie=UTF8&ref_=nav_youraccount_orders&">Amazon</a>
         </ul>
       </div>
       <div class="list left2">
